| Bug #30667 | ndb table discovery does not work correcly with information schema | ||
|---|---|---|---|
| Submitted: | 28 Aug 2007 14:39 | Modified: | 15 Sep 2007 13:14 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Tomas Ulin | Target Version: | |
[28 Aug 2007 14:39]
Tomas Ulin
[28 Aug 2007 15:35]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/33217 ChangeSet@1.2583, 2007-08-28 15:43:06+02:00, tomas@whalegate.ndb.mysql.com +2 -0 Bug #30667 ndb table discovery does not work correcly with information schema - the listed file_names are not necessarily on disk, so we need to discover them if they aren't
[28 Aug 2007 15:37]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/33219 ChangeSet@1.2584, 2007-08-28 15:44:20+02:00, tomas@whalegate.ndb.mysql.com +1 -0 Bug #30667 result file
[7 Sep 2007 22:08]
Jon Stephens
Documented bugfix in mysql-5.1.22-ndb-6.2.5 changelog; left status as PP, waiting for merge with 5.1-main.
[14 Sep 2007 18:26]
Bugs System
Pushed into 5.1.23-beta
[15 Sep 2007 13:14]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Also documented in 5.1.23 changelog.
