Bug #30667 ndb table discovery does not work correcly with information schema - the listed file_names are not necessarily on disk, so we need to discover them if they aren't

mysql-test/t/ndb_restore.test:
  Bug #30667 ndb table discovery does not work correcly with information schema