sql/ha_ndbcluster.cc
@@ -6955,9 +6955,26 @@ int ndbcluster_find_files(handlerton *hton, THD *thd,
   while ((file_name=it++))
   {
     bool file_on_disk= FALSE;
-    DBUG_PRINT("info", ("%s", file_name));     
+    DBUG_PRINT("info", ("%s", file_name));
     if (hash_search(&ndb_tables, file_name, strlen(file_name)))
     {
+      build_table_filename(name, sizeof(name), db, file_name, reg_ext, 0);
+      if (my_access(name, F_OK))
+      {
+        pthread_mutex_lock(&LOCK_open);
+        DBUG_PRINT("info", ("Table %s listed and need discovery",
+                            file_name));
+        if (ndb_create_table_from_engine(thd, db, file_name))
+        {
+          pthread_mutex_unlock(&LOCK_open);
+          push_warning_printf(current_thd, MYSQL_ERROR::WARN_LEVEL_WARN,
+                              ER_TABLE_EXISTS_ERROR,
+                              "Discover of table %s.%s failed",
+                              db, file_name);
+          continue;
+        }
+        pthread_mutex_unlock(&LOCK_open);
+      }
       DBUG_PRINT("info", ("%s existed in NDB _and_ on disk ", file_name));
       file_on_disk= TRUE;
     }
